parser/tests/Create.test
#   Copyright 2011-2015 Quickstep Technologies LLC.
#   Copyright 2015 Pivotal Software, Inc.
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

CREATE TABLE TABLE (attr int)
--
ERROR: syntax error (1 : 14)
CREATE TABLE TABLE (attr int)
             ^
==

# We do not allow an empty-column table.
CREATE TABLE test ()
--
ERROR: syntax error (1 : 20)
CREATE TABLE test ()
                   ^
==

CREATE TABLE test (attr1 INT, attr2 FLOAT, attr3 DOUBLE, attr4 CHAR(5), attr5 VARCHAR(4))
--
CreateTableStatement[relation_name=test]
+-attribute_list=
  +-AttributeDefinition[name=attr1,type=Int]
  +-AttributeDefinition[name=attr2,type=Float]
  +-AttributeDefinition[name=attr3,type=Double]
  +-AttributeDefinition[name=attr4,type=Char(5)]
  +-AttributeDefinition[name=attr5,type=VarChar(4)]
==

CREATE TABLE test (attr CHAR(-1))
--
ERROR: syntax error (1 : 30)
CREATE TABLE test (attr CHAR(-1))
                             ^
==

# Zero-length char type is not allowed.
CREATE TABLE test (attr CHAR(0))
--
ERROR: Length for CHAR type must be at least 1 (1 : 30)
CREATE TABLE test (attr CHAR(0))
                             ^
==

CREATE TABLE test(attr CHAR(1+1))
--
ERROR: syntax error (1 : 30)
CREATE TABLE test(attr CHAR(1+1))
                             ^
==

CREATE TABLE test (attr UNKNOWN_TYPE)
--
ERROR: syntax error (1 : 25)
CREATE TABLE test (attr UNKNOWN_TYPE)
                        ^
==

CREATE TABLE test (attr INT NULL, attr FLOAT NOT NULL)
--
CreateTableStatement[relation_name=test]
+-attribute_list=
  +-AttributeDefinition[name=attr,type=Int NULL]
  +-AttributeDefinition[name=attr,type=Float]
==

CREATE TABLE test (attr INT UNIQUE)
--
ERROR: Column Constraints (UNIQUE) is not supported yet (1 : 29)
CREATE TABLE test (attr INT UNIQUE)
                            ^
==

CREATE TABLE test (attr INT PRIMARY KEY)
--
ERROR: Column Constraints (PRIMARY KEY) is not supported yet (1 : 29)
CREATE TABLE test (attr INT PRIMARY KEY)
                            ^
==

CREATE TABLE test (attr INT DEFAULT 4)
--
ERROR: Column Constraints (DEFAULT) is not supported yet (1 : 29)
CREATE TABLE test (attr INT DEFAULT 4)
                            ^
==

CREATE TABLE test (attr INT CHECK(attr>5))
--
ERROR: Column Constraints (CHECK) is not supported yet (1 : 29)
CREATE TABLE test (attr INT CHECK(attr>5))
                            ^
==

CREATE TABLE test (attr INT REFERENCES test2(attr2))
--
ERROR: Foreign Keys is not supported yet (1 : 29)
CREATE TABLE test (attr INT REFERENCES test2(attr2))
                            ^
==

CREATE TABLE test (attr INT) UNIQUE(attr)
--
ERROR: Table Constraints (UNIQUE) is not supported yet (1 : 30)
CREATE TABLE test (attr INT) UNIQUE(attr)
                             ^
==

CREATE TABLE test (attr INT) PRIMARY KEY(attr)
--
ERROR: Table Constraints (PRIMARY KEY) is not supported yet (1 : 30)
CREATE TABLE test (attr INT) PRIMARY KEY(attr)
                             ^
==

CREATE TABLE test (attr INT) FOREIGN KEY(attr)
--
ERROR: syntax error (1 : 47)
... TABLE test (attr INT) FOREIGN KEY(attr)
                                           ^
==

CREATE TABLE test (attr INT) CHECK(attr>0)
--
ERROR: Table Constraints (CHECK) is not supported yet (1 : 30)
CREATE TABLE test (attr INT) CHECK(attr>0)
                             ^
==

CREATE TABLE test (attr INT) WITH BLOCKPROPERTIES
(TYPE rowstore)
--
CreateTableStatement[relation_name=test]
+-attribute_list=
| +-AttributeDefinition[name=attr,type=Int]
+-block_properties=
  +-KeyStringValue[key=TYPE]
    +-value=String[value=rowstore]
==

CREATE TABLE test (attr INT) WITH BLOCKPROPERTIES
(TYPE compressed_columnstore, SORT attr, COMPRESS ALL)
--
CreateTableStatement[relation_name=test]
+-attribute_list=
| +-AttributeDefinition[name=attr,type=Int]
+-block_properties=
  +-KeyStringValue[key=TYPE]
  | +-value=String[value=compressed_columnstore]
  +-KeyStringValue[key=SORT]
  | +-value=String[value=attr]
  +-KeyStringValue[key=COMPRESS]
    +-value=String[value=ALL]
==

CREATE TABLE test (attr1 INT, attr2 INT) WITH BLOCKPROPERTIES
(TYPE compressed_columnstore, SORT attr1, COMPRESS (attr1, attr2))
--
CreateTableStatement[relation_name=test]
+-attribute_list=
| +-AttributeDefinition[name=attr1,type=Int]
| +-AttributeDefinition[name=attr2,type=Int]
+-block_properties=
  +-KeyStringValue[key=TYPE]
  | +-value=String[value=compressed_columnstore]
  +-KeyStringValue[key=SORT]
  | +-value=String[value=attr1]
  +-KeyStringList[key=COMPRESS]
    +-value_list=
      +-String[value=attr1]
      +-String[value=attr2]
==

CREATE TABLE test (attr INT) WITH BLOCKPROPERTIES
(TYPE rowstore, BLOCKSIZE 10);
--
CreateTableStatement[relation_name=test]
+-attribute_list=
| +-AttributeDefinition[name=attr,type=Int]
+-block_properties=
  +-KeyStringValue[key=TYPE]
  | +-value=String[value=rowstore]
  +-KeyIntegerValue[key=BLOCKSIZE]
    +-value=NumericLiteral[numeric_string=10,float_like=false]
